# rvg

./: .clang_complete  .gitignore  README.md  fso.h  meson.build  meson_options.txt  notes.md  vgv.hpp
docs/: Intro.md  color.md  font.md  intro.md  notes.md  roadmap.md  transform.md
docs/tests/: color.cpp  context.cpp  main.hpp  meson.build  render.cpp
example/: example.cpp  example_glfw.cpp  example_ny.cpp  gui.cpp  gui.hpp  guiConcept.cpp  meson.build  render.cpp  render.hpp  scale.cpp  window.cpp  window.hpp
example/vui/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  colorPicker.cpp  colorPicker.hpp  container.cpp  container.hpp  dat.cpp  dat.hpp  fwd.hpp  gui.cpp  gui.hpp  hint.cpp  hint.hpp  input.hpp  layout.hpp  style.hpp  textfield.cpp  textfield.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
include/rvg/: context.hpp  deviceObject.hpp  font.hpp  fwd.hpp  paint.hpp  polygon.hpp  shapes.hpp  state.hpp  stateChange.hpp  text.hpp
include/vgv/: path.hpp  vgv.hpp
src/rvg/: context.cpp  font.cpp  fontstash.h  meson.build  paint.cpp  polygon.cpp  rvg.cpp  shapes.cpp  state.cpp  text.cpp  texture.cpp  util.hpp
src/rvg/nk_font/: font.c  font.h  internal.h
src/shaders/: fill.frag  fill.vert  meson.build  paint.glsl  text.frag  text.vert
src/vgv/: meson.build  paint.cpp  path.cpp  stb_image.h  texture.cpp  vgv.cpp
src/vgv/nk_font/: font.c  font.h  internal.h  rectpack.h  truetype.h
subprojects/: bugged.wrap  dlg.wrap  katachi.wrap  ny.wrap  nytl.wrap  vpp.wrap
